# sql-crawler

./: sql-crawler.cabal  stack.yaml
app/: Main.hs  MinimalWebServer.hs
src/: AppianPage.hs  Core.hs  HTTPClient.hs  JSONUtils.hs  Relations.hs  Types.hs  httpTest.hs  relationTest.hs
