name:                sql-crawler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sql-crawler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HTTPClient
                     , Relations
                     , Core
  build-depends:       base >= 4.7 && < 5
                     , time
                     , resourcet
                     , transformers
                     , classy-prelude
                     , http-client
                     , http-conduit
                     , conduit
                     , conduit-combinators
                     , bytestring
                     , http-types
                     , hxt
                     , aeson
                     , stringsearch
                     , monad-control
                     , transformers-base
                     , mtl
  default-language:    Haskell2010

executable sql-crawler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sql-crawler
                     , classy-prelude
  default-language:    Haskell2010

test-suite sql-crawler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sql-crawler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sql-crawler
